--- a/gb/21/8/8/n13147908.md
+++ b/gb/21/8/8/n13147908.md
@@ -1,17 +1,17 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qtfwow338/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/qtfwow338/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/qtfwow338/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qtfwow338/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/qtfwow338/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/qtfwow338/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/qtfwow338/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ydbzqt347/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ydbzqt347/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ydbzqt347/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ydbzqt347/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>唐氏症男生收到大学录取通知书 喜极而泣</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/08/id13148042-shutterstock_1705428442-600x400.jpg" />
 <h6>科特去年5月高中毕业。图为示意图。(Shutterstock)
 </h6>
 <hr>
-	<p>【大纪元2021年08月08日讯】（大纪元记者林瑰编译报导）20岁的科特·金利（Kurt Kinley）是伊利诺伊州诺默尔（Normal）镇的一名高中毕业生。最近他被一个为有特殊需要的学生开设的社区大学录取了。他在收到<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E5%BD%95%E5%8F%96%E9%80%9A%E7%9F%A5.md#1">录取通知</a>书时喜极而泣的样子，被妈妈用手机拍了下来。<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E8%A7%86%E9%A2%91.md#1">视频</a>在网上疯传，点击量超过21.09万。</p>
+	<p>【大纪元2021年08月08日讯】（大纪元记者林瑰编译报导）20岁的科特·金利（Kurt Kinley）是伊利诺伊州诺默尔（Normal）镇的一名高中毕业生。最近他被一个为有特殊需要的学生开设的社区大学录取了。他在收到<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%BD%95%E5%8F%96%E9%80%9A%E7%9F%A5.md#1">录取通知</a>书时喜极而泣的样子，被妈妈用手机拍了下来。<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%A7%86%E9%A2%91.md#1">视频</a>在网上疯传，点击量超过21.09万。</p>
 <p>科特的母亲米歇尔·金利（Michele Kinley）在接受福克斯新闻的电话采访时表示，科特患有唐氏综合症。2020年5月他从伊利诺伊州诺默尔镇的诺默尔西部高中毕业。但由于冠状病毒大流行，他不得不推迟升学。</p>
 <p>在过去7个月里，科特在当地的一家面包店和蹦床公园学习技能，没有参加远程学习，因为远程学习提供的社交和工作机会太少。</p>
 <p>但科特从未放弃上大学的梦想，希望能像哥哥、姐姐一样。他申请了哈特兰（Heartland）社区学院的哈特兰学习机会专科院校（HALO），并参加了面试。这是针对18岁至28岁学生的高等教育课程。这些课程包括阅读、理财、烹饪、数学和其它有助于培养学生独立性的重要生活技能。</p>
-<p>最近，科特收到了哈特兰社区学院的<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E5%BD%95%E5%8F%96%E9%80%9A%E7%9F%A5.md#1">录取通知</a>书。当爸爸把通知书递给科特时，他高兴得跳了起来。读着通知书上的内容，科特又忍不住俯身痛哭。姐姐轻抚着他的背，安慰着他。妈妈用手机记录下整个过程。</p>
-<p>米歇尔说，当她拿手机拍摄时，并不清楚信里写了什么。“你可以看到<ahref="https://github.com/qtfwow338/djy/blob/master/gb/tag/%E8%A7%86%E9%A2%91.md#1">视频</a>上）他很激动。我们希望这件事能广传，让人们意识到有特殊需要的成年人有很多机会。在这个过程中，我们从家人、朋友、老师、专业辅助人员和同学那里得到了很多帮助。”</p>
+<p>最近，科特收到了哈特兰社区学院的<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E5%BD%95%E5%8F%96%E9%80%9A%E7%9F%A5.md#1">录取通知</a>书。当爸爸把通知书递给科特时，他高兴得跳了起来。读着通知书上的内容，科特又忍不住俯身痛哭。姐姐轻抚着他的背，安慰着他。妈妈用手机记录下整个过程。</p>
+<p>米歇尔说，当她拿手机拍摄时，并不清楚信里写了什么。“你可以看到<ahref="https://github.com/ydbzqt347/djy/blob/master/gb/tag/%E8%A7%86%E9%A2%91.md#1">视频</a>上）他很激动。我们希望这件事能广传，让人们意识到有特殊需要的成年人有很多机会。在这个过程中，我们从家人、朋友、老师、专业辅助人员和同学那里得到了很多帮助。”</p>
 <p>哥哥格伦·金利（Glenn Kinley）看到视频后很感动，把它传到推特上。他写道：“最近我接到弟弟的电话，我能听出他在强忍着泪水。他说‘格伦，我要去上大学了。’他刚被一个为有特殊需要的学生开设的社区大学录取了。这是他在收到录取通知书时的情景。”</p>
 <p><strong>?<u><ahref="https://twitter.com/glenn_kinley/status/1411350957712101383" target="_blank" rel="noopener noreferrer">点击这里看视频</a></u>。</strong></p>
 <p>这条推文立刻在推特上走红，得到了数千次转发，数十万个点赞。格伦还收到了一些家长的留言，说在看了科特的视频后，他们的孩子也希望“有一天能上大学”，这让他们很受鼓舞。</p>
@@ -23,35 +23,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/21/6/22/n13039338.md#1">荷兰24岁唐氏症模特登《魅力》杂志封面</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/21/7/6/n13071654.md#1">十岁唐氏症女孩成模特：世界需更多善与关爱</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/21/7/12/n13082657.md#1">受偶像激励 美唐氏症少年完成迷你铁人三项</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/21/7/18/n13096406.md#1">夫妇拒绝流产唐氏症宝宝 现在儿子是健康模特</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/6/22/n13039338.md#1">荷兰24岁唐氏症模特登《魅力》杂志封面</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/7/6/n13071654.md#1">十岁唐氏症女孩成模特：世界需更多善与关爱</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/7/12/n13082657.md#1">受偶像激励 美唐氏症少年完成迷你铁人三项</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/7/18/n13096406.md#1">夫妇拒绝流产唐氏症宝宝 现在儿子是健康模特</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/2/7/n11029582.md#1" target="_blank">荟楠：快跑！祖国来了！</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/10/11/n11581886.md#1" target="_blank">澳青年法轮功学员：修大法给我带来的福分</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank">藏字石 蕴天机</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/7/n11437710.md#1" target="_blank">林辉：国民党撤至台湾后破获的中共渗透大案</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/11/n10902768.md#1" target="_blank">美向联合国提出关注 促中共停止迫害法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/28/n11983353.md#1">台夫妻逾期未缴居家检疫罚款30万 两人已出境</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/29/n11984729.md#1">从中国进口130万缺陷口罩 荷兰停用并召回</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/29/n11986130.md#1">台湾再增一名中共肺炎死亡患者 年仅40余岁</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/28/n11983549.md#1">新闻出现“封台倒数6天” 中天更正致歉</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/28/n11984334.md#1">中国真的零确诊？“黄安躲在台湾”打脸中共</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/30/n11987402.md#1">刘真今火化胞弟送最后一程 辛龙未现身</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/29/n11985885.md#1">灵堂开放最后一天 辛龙难舍爱妻一度掩面痛哭</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/27/n11981967.md#1">跑完通告高烧38度 香港女星忧染疫入院筛检</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/29/n11984757.md#1">台魔术师曝隔离出关日 被陈时中“暖举”感动</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/26/n11978058.md#1">中共朝令夕改成常态 疫情下影院再度停业</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/29/n11985219.md#1">大疫下圣母玛利亚现身阿根廷天空？</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/23/n11965516.md#1">【命理】为何算命师说他：死后方行好运享光彩？　</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/27/n11981662.md#1">【文史】大难前如何避祸 埃及十灾给启示</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/17/n11948074.md#1">古人濒死体验：元神离体游历天国 预知时局</a></li>
-<li><a href="https://github.com/qtfwow338/djy/blob/master/gb/20/3/25/n11974495.md#1">面对魔鬼诱惑时 您会如何选择？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13675586.md#1">沉睡二千五百年绝世神剑  先进科技惊震天下</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/21/12/21/n13451605.md#1">【百年真相】到底谁是特务？延安整风内幕</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/25/n13671775.md#1">【战争随笔】基辅印象 温暖而有风度</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/18/n13656536.md#1">【百年真相】发言3分钟右派20年 朱镕基说了啥</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688842.md#1">【十字路口】曹兴诚重炮轰 中共是“人类公敌”</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689765.md#1">【远见快评】傅政华双开通报 3大谜团全解析</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13689709.md#1">唐瑞讲故事｜朗读｜小熊维尼第五章</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687190.md#1">王友群：朱镕基反对习近平三连任？</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684346.md#1">应勇卸任湖北一把手 美分析师：是条大新闻</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13685194.md#1">上海防疫水深？ 张文宏消失 左派提路线斗争</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/4/1/n13688133.md#1">台剧艺人陈熙锋喜迎千金 全程陪产记录感动</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684323.md#1">章子怡引对联悼东航空难 用词意外引热议</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687135.md#1">奥斯卡颁奖时挨史密斯一巴掌 洛克3天后首发声</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13684458.md#1">90后杨紫粉丝闹乌龙 功夫影星杨紫琼登热搜</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13687324.md#1">睽违18年再合作 梁朝伟刘德华新片造型曝光</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683454.md#1">5种超级蔬菜 抗氧化、提高免疫又防癌症</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/28/n13677160.md#1">早餐来一杯治愈大脑！清除脑雾的方法</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/30/n13683642.md#1">水果剥皮直接吃是错的！吃水果的7大误区</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/29/n13681028.md#1">提高抗氧化水平 维生素C的6大好处</a></li>
+<li><a href="https://github.com/ydbzqt347/djy/blob/master/gb/22/3/31/n13686139.md#1">研究：打新冠疫苗几个月后的心脏异常</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/qtfwow338/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/qtfwow338/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/8/8/n13147908.htm">唐氏症男生收到大学录取通知书 喜极而泣</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ydbzqt347/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/8/8/n13147908.htm">唐氏症男生收到大学录取通知书 喜极而泣</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/qtfwow338/djy/blob/master/gb/21/8/8/n13147908.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/qtfwow338/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/qtfwow338/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/qtfwow338/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/qtfwow338/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtfwow338/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ydbzqt347/djy/blob/master/gb/21/8/8/n13147908.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ydbzqt347/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ydbzqt347/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ydbzqt347/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
